ghc-6.2/hslibs/win32/Win32HDC_stub_ffi.h

extern void* prim_setArcDirection(HDC arg1,WORD arg2);
extern WORD access_prim_setArcDirection_res1(HsPtr);
extern int access_prim_setArcDirection_gc_failed(HsPtr);
extern void* access_prim_setArcDirection_gc_failstring(HsPtr);
extern void* prim_getArcDirection(HDC arg1);
extern WORD access_prim_getArcDirection_res1(HsPtr);
extern int access_prim_getArcDirection_gc_failed(HsPtr);
extern void* access_prim_getArcDirection_gc_failstring(HsPtr);
extern void* prim_setPolyFillMode(HDC arg1,WORD arg2);
extern WORD access_prim_setPolyFillMode_res1(HsPtr);
extern int access_prim_setPolyFillMode_gc_failed(HsPtr);
extern void* access_prim_setPolyFillMode_gc_failstring(HsPtr);
extern void* prim_getPolyFillMode(HDC arg1);
extern WORD access_prim_getPolyFillMode_res1(HsPtr);
extern int access_prim_getPolyFillMode_gc_failed(HsPtr);
extern void* access_prim_getPolyFillMode_gc_failstring(HsPtr);
extern void* prim_setGraphicsMode(HDC arg1,DWORD arg2);
extern DWORD access_prim_setGraphicsMode_res1(HsPtr);
extern int access_prim_setGraphicsMode_gc_failed(HsPtr);
extern void* access_prim_setGraphicsMode_gc_failstring(HsPtr);
extern void* prim_getGraphicsMode(HDC arg1);
extern DWORD access_prim_getGraphicsMode_res1(HsPtr);
extern int access_prim_getGraphicsMode_gc_failed(HsPtr);
extern void* access_prim_getGraphicsMode_gc_failstring(HsPtr);
extern void* prim_setStretchBltMode(HDC arg1,UINT arg2);
extern UINT access_prim_setStretchBltMode_res1(HsPtr);
extern int access_prim_setStretchBltMode_gc_failed(HsPtr);
extern void* access_prim_setStretchBltMode_gc_failstring(HsPtr);
extern void* prim_getStretchBltMode(HDC arg1);
extern UINT access_prim_getStretchBltMode_res1(HsPtr);
extern int access_prim_getStretchBltMode_gc_failed(HsPtr);
extern void* access_prim_getStretchBltMode_gc_failstring(HsPtr);
extern void* prim_setBkColor(HDC arg1,DWORD arg2);
extern DWORD access_prim_setBkColor_res1(HsPtr);
extern int access_prim_setBkColor_gc_failed(HsPtr);
extern void* access_prim_setBkColor_gc_failstring(HsPtr);
extern void* prim_getBkColor(HDC arg1);
extern DWORD access_prim_getBkColor_res1(HsPtr);
extern int access_prim_getBkColor_gc_failed(HsPtr);
extern void* access_prim_getBkColor_gc_failstring(HsPtr);
extern void* prim_setTextColor(HDC arg1,DWORD arg2);
extern DWORD access_prim_setTextColor_res1(HsPtr);
extern int access_prim_setTextColor_gc_failed(HsPtr);
extern void* access_prim_setTextColor_gc_failstring(HsPtr);
extern void* prim_getTextColor(HDC arg1);
extern DWORD access_prim_getTextColor_res1(HsPtr);
extern int access_prim_getTextColor_gc_failed(HsPtr);
extern void* access_prim_getTextColor_gc_failstring(HsPtr);