ghc-6.2/hslibs/win32/Win32HDC.hs

module Win32HDC
	( module Win32HDC
	) where

import Win32Types
import StdDIS
import GDITypes


---------------- Macros to set/get fields of HDC ----------------









----------------------------------------------------------------

setArcDirection :: HDC -> ArcDirection -> IO ArcDirection
setArcDirection arg1 arg2 =
  prim_setArcDirection arg1 arg2
  >>= \ gc_result ->
  access_prim_setArcDirection_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setArcDirection_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setArcDirection_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setArcDirection" prim_setArcDirection :: Addr -> Word16 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setArcDirection_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setArcDirection_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setArcDirection_gc_failstring :: Addr -> IO (Addr)
getArcDirection :: HDC -> IO ArcDirection
getArcDirection arg1 =
  prim_getArcDirection arg1
  >>= \ gc_result ->
  access_prim_getArcDirection_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getArcDirection_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getArcDirection_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getArcDirection" prim_getArcDirection :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getArcDirection_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getArcDirection_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getArcDirection_gc_failstring :: Addr -> IO (Addr)
       
setPolyFillMode :: HDC -> PolyFillMode -> IO PolyFillMode
setPolyFillMode arg1 arg2 =
  prim_setPolyFillMode arg1 arg2
  >>= \ gc_result ->
  access_prim_setPolyFillMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setPolyFillMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setPolyFillMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setPolyFillMode" prim_setPolyFillMode :: Addr -> Word16 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setPolyFillMode_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setPolyFillMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setPolyFillMode_gc_failstring :: Addr -> IO (Addr)
getPolyFillMode :: HDC -> IO PolyFillMode
getPolyFillMode arg1 =
  prim_getPolyFillMode arg1
  >>= \ gc_result ->
  access_prim_getPolyFillMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getPolyFillMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getPolyFillMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getPolyFillMode" prim_getPolyFillMode :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getPolyFillMode_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getPolyFillMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getPolyFillMode_gc_failstring :: Addr -> IO (Addr)
       
setGraphicsMode :: HDC -> GraphicsMode -> IO GraphicsMode
setGraphicsMode arg1 arg2 =
  prim_setGraphicsMode arg1 arg2
  >>= \ gc_result ->
  access_prim_setGraphicsMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setGraphicsMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setGraphicsMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setGraphicsMode" prim_setGraphicsMode :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setGraphicsMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setGraphicsMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setGraphicsMode_gc_failstring :: Addr -> IO (Addr)
getGraphicsMode :: HDC -> IO GraphicsMode
getGraphicsMode arg1 =
  prim_getGraphicsMode arg1
  >>= \ gc_result ->
  access_prim_getGraphicsMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getGraphicsMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getGraphicsMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getGraphicsMode" prim_getGraphicsMode :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getGraphicsMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getGraphicsMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getGraphicsMode_gc_failstring :: Addr -> IO (Addr)
       
setStretchBltMode :: HDC -> StretchBltMode -> IO StretchBltMode
setStretchBltMode arg1 arg2 =
  prim_setStretchBltMode arg1 arg2
  >>= \ gc_result ->
  access_prim_setStretchBltMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setStretchBltMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setStretchBltMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setStretchBltMode" prim_setStretchBltMode :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setStretchBltMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setStretchBltMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setStretchBltMode_gc_failstring :: Addr -> IO (Addr)
getStretchBltMode :: HDC -> IO StretchBltMode
getStretchBltMode arg1 =
  prim_getStretchBltMode arg1
  >>= \ gc_result ->
  access_prim_getStretchBltMode_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getStretchBltMode_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getStretchBltMode_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getStretchBltMode" prim_getStretchBltMode :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getStretchBltMode_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getStretchBltMode_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getStretchBltMode_gc_failstring :: Addr -> IO (Addr)
       
setBkColor :: HDC -> COLORREF -> IO COLORREF
setBkColor arg1 arg2 =
  prim_setBkColor arg1 arg2
  >>= \ gc_result ->
  access_prim_setBkColor_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setBkColor_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setBkColor_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setBkColor" prim_setBkColor :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkColor_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkColor_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setBkColor_gc_failstring :: Addr -> IO (Addr)
getBkColor :: HDC -> IO COLORREF
getBkColor arg1 =
  prim_getBkColor arg1
  >>= \ gc_result ->
  access_prim_getBkColor_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getBkColor_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getBkColor_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getBkColor" prim_getBkColor :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkColor_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkColor_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getBkColor_gc_failstring :: Addr -> IO (Addr)

setTextColor :: HDC -> COLORREF -> IO COLORREF
setTextColor arg1 arg2 =
  prim_setTextColor arg1 arg2
  >>= \ gc_result ->
  access_prim_setTextColor_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_setTextColor_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setTextColor_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_setTextColor" prim_setTextColor :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextColor_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextColor_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_setTextColor_gc_failstring :: Addr -> IO (Addr)
getTextColor :: HDC -> IO COLORREF
getTextColor arg1 =
  prim_getTextColor arg1
  >>= \ gc_result ->
  access_prim_getTextColor_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getTextColor_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getTextColor_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getTextColor" prim_getTextColor :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextColor_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextColor_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getTextColor_gc_failstring :: Addr -> IO (Addr)
